# django-rest-framework-jwt-oauth2

./: .gitignore  .travis.yml  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile
docs/source/: conf.py  index.rst
requirements/: dev.txt  docs.txt  package.txt  test.txt
rest_framework_jwt_oauth2/: __init__.py  app_settings.py  apps.py  middlewares.py  serializers.py  urls.py  views.py
rest_framework_jwt_oauth2/tests/: api_fixtures.py
rest_framework_jwt_oauth2/utils/: adapter.py  serializers.py
tests/: apps.py  conftest.py  test_example.py  test_jwt.py  urls.py
tests/settings/: dev.py  test.py
