[bumpversion]
current_version = 0.0.4
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]

[bumpversion:file:rest_framework_jwt_oauth2/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude = 
	rest_framework_jwt_oauth2/migrations,
	.git,
	.tox,
	docs/conf.py,
	build,
	dist
max-line-length = 99

